--- a/UAS_PDM_21_11_4238.ipynb
+++ b/UAS_PDM_21_11_4238.ipynb
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -122,7 +122,7 @@
               "True"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -137,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -164,12 +164,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
         "#Load dataset\n",
-        "df = pd.read_csv('./data/spam_dataset_2.csv')\n",
+        "df = pd.read_csv('./data/combined_data.csv')\n",
         "\n",
         "# Pisahkan fitur dan label\n",
         "y = df['label']\n",
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [
         {
@@ -282,7 +282,7 @@
               "9      1  upon this account he is not only very cautious..."
             ]
           },
-          "execution_count": 4,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -293,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
@@ -390,7 +390,7 @@
               "83447      1  get the most out of life ! viagra has helped m..."
             ]
           },
-          "execution_count": 19,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -401,19 +401,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 35,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "label      int64\n",
-              "text      object\n",
-              "length     int64\n",
+              "label     int64\n",
+              "text     object\n",
               "dtype: object"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -424,7 +423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 36,
       "metadata": {},
       "outputs": [
         {
@@ -449,67 +448,58 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>label</th>\n",
-              "      <th>length</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>count</th>\n",
               "      <td>83448.000000</td>\n",
-              "      <td>83448.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>mean</th>\n",
               "      <td>0.526196</td>\n",
-              "      <td>1662.952725</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>std</th>\n",
               "      <td>0.499316</td>\n",
-              "      <td>4178.578068</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>min</th>\n",
               "      <td>0.000000</td>\n",
-              "      <td>1.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>25%</th>\n",
               "      <td>0.000000</td>\n",
-              "      <td>449.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>50%</th>\n",
               "      <td>1.000000</td>\n",
-              "      <td>879.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>75%</th>\n",
               "      <td>1.000000</td>\n",
-              "      <td>1861.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>max</th>\n",
               "      <td>1.000000</td>\n",
-              "      <td>598705.000000</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "              label         length\n",
-              "count  83448.000000   83448.000000\n",
-              "mean       0.526196    1662.952725\n",
-              "std        0.499316    4178.578068\n",
-              "min        0.000000       1.000000\n",
-              "25%        0.000000     449.000000\n",
-              "50%        1.000000     879.000000\n",
-              "75%        1.000000    1861.000000\n",
-              "max        1.000000  598705.000000"
+              "              label\n",
+              "count  83448.000000\n",
+              "mean       0.526196\n",
+              "std        0.499316\n",
+              "min        0.000000\n",
+              "25%        0.000000\n",
+              "50%        1.000000\n",
+              "75%        1.000000\n",
+              "max        1.000000"
             ]
           },
-          "execution_count": 25,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -520,7 +510,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [
         {
@@ -529,14 +519,13 @@
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 83448 entries, 0 to 83447\n",
-            "Data columns (total 3 columns):\n",
+            "Data columns (total 2 columns):\n",
             " #   Column  Non-Null Count  Dtype \n",
             "---  ------  --------------  ----- \n",
             " 0   label   83448 non-null  int64 \n",
             " 1   text    83448 non-null  object\n",
-            " 2   length  83448 non-null  int64 \n",
-            "dtypes: int64(2), object(1)\n",
-            "memory usage: 1.9+ MB\n"
+            "dtypes: int64(1), object(1)\n",
+            "memory usage: 1.3+ MB\n"
           ]
         }
       ],
@@ -546,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -619,20 +608,20 @@
               "4      0  thanks for all your answers guys i know i shou...    1362"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# adding new column as length of the text\n",
+        "df['text'] = df['text'].astype(str)\n",
         "df['length'] = df['text'].apply(len)\n",
         "df.head()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -644,7 +633,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 28,
+          "execution_count": 39,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -662,7 +651,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [
         {
@@ -671,7 +660,7 @@
               "Text(0.5, 1.0, 'Number of Spam and Ham')"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 40,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -696,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [
         {
@@ -705,7 +694,7 @@
               "Text(0.5, 1.0, 'Length of Text')"
             ]
           },
-          "execution_count": 11,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -729,7 +718,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -739,7 +728,7 @@
               "Name: text, dtype: object"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 42,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -751,7 +740,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [
         {
@@ -761,7 +750,7 @@
               "      dtype=object)"
             ]
           },
-          "execution_count": 13,
+          "execution_count": 43,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -790,7 +779,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -809,7 +798,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -819,7 +808,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -828,7 +817,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -855,7 +844,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -874,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -885,7 +874,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -895,7 +884,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -910,7 +899,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -919,14 +908,14 @@
         "pipe_svc.fit(X_train,y_train)\n",
         "\n",
         "# Save the model\n",
-        "model_filename = './models/trained_model_2.pkl'\n",
+        "model_filename = './models/trained_model.pkl'\n",
         "with open(model_filename, 'wb') as file:\n",
         "    pickle.dump(pipe_svc, file)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 54,
       "metadata": {},
       "outputs": [
         {
@@ -939,7 +928,7 @@
         }
       ],
       "source": [
-        "model_filename = './models/trained_model_2.pkl'\n",
+        "model_filename = './models/trained_model.pkl'\n",
         "\n",
         "# Load the model\n",
         "with open(model_filename, 'rb') as file:\n",
@@ -958,7 +947,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 56,
       "metadata": {},
       "outputs": [
         {
@@ -989,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 57,
       "metadata": {},
       "outputs": [
         {
@@ -998,7 +987,7 @@
               "Text(0.5, 1.0, 'Confusion Matrix for SVC')"
             ]
           },
-          "execution_count": 29,
+          "execution_count": 57,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -1030,7 +1019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 58,
       "metadata": {},
       "outputs": [
         {
